feat: group API 날려보면서 테스트 진행
