# internal/server/handler/group_handler.go
@@ -36,6 +36,16 @@ func NewGroupHandler(
 	return handler
 }
 
+// CreateGroup godoc
+//
+//	@Tags		groups
+//	@Summary	새로운 모임 생성 ✅
+//	@Accept		json
+//	@Produce	json
+//	@Param		CreateGroupRequest	body		domain.CreateGroupRequest	true	"생성할 모임 정보"
+//	@Success	201					{object}	domain.CreateGroupResponse	"성공적으로 모임을 생성한 경우"
+//	@Router		/groups [post]
+//	@Security	BearerAuth
 func (h GroupHandler) CreateGroup(c *fiber.Ctx) error {
 	var (
 		request  domain.CreateGroupRequest
@@ -64,6 +74,16 @@ func (h GroupHandler) CreateGroup(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusCreated).JSON(response)
 }
 
+// ListGroups godoc
+//
+//	@Tags		groups
+//	@Summary	모임 리스트 ✅
+//	@Accept		json
+//	@Produce	json
+//	@Param		limit	query		int							false	"조회할 모임 개수"
+//	@Success	200		{object}	domain.ListGroupsResponse	"성공적으로 모임 리스트를 조회한 경우"
+//	@Router		/groups [get]
+//	@Security	BearerAuth
 func (h GroupHandler) ListGroups(c *fiber.Ctx) error {
 	var (
 		request  domain.ListGroupsRequest
@@ -79,6 +99,10 @@ func (h GroupHandler) ListGroups(c *fiber.Ctx) error {
 		return err
 	}
 
+	if request.UserID, err = ctxutil.GetUserID(c); err != nil {
+		return err
+	}
+
 	response, err = h.groupService.ListGroups(c.Context(), request)
 	if err != nil {
 		return err
@@ -87,6 +111,17 @@ func (h GroupHandler) ListGroups(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(response)
 }
 
+// PatchGroup godoc
+//
+//	@Tags		groups
+//	@Summary	모임 정보 수정 ✅
+//	@Accept		json
+//	@Produce	json
+//	@Param		group-id			path	string						true	"수정할 모임 ID"
+//	@Param		PatchGroupRequest	body	domain.PatchGroupRequest	true	"수정할 모임 정보"
+//	@Success	204
+//	@Router		/groups/{group-id} [patch]
+//	@Security	BearerAuth
 func (h GroupHandler) PatchGroup(c *fiber.Ctx) error {
 	var (
 		request domain.PatchGroupRequest
@@ -113,6 +148,16 @@ func (h GroupHandler) PatchGroup(c *fiber.Ctx) error {
 	return c.SendStatus(fiber.StatusNoContent)
 }
 
+// JoinGroup godoc
+//
+//	@Tags		groups
+//	@Summary	모임 참가 ✅
+//	@Accept		json
+//	@Produce	json
+//	@Param		JoinGroupRequest	body	domain.JoinGroupRequest	true	"참여할 모임 정보"
+//	@Success	204
+//	@Router		/groups/join [post]
+//	@Security	BearerAuth
 func (h GroupHandler) JoinGroup(c *fiber.Ctx) error {
 	var (
 		request domain.JoinGroupRequest
@@ -139,6 +184,16 @@ func (h GroupHandler) JoinGroup(c *fiber.Ctx) error {
 	return c.SendStatus(fiber.StatusNoContent)
 }
 
+// LeaveGroup godoc
+//
+//	@Tags		groups
+//	@Summary	모임 탈퇴 ✅
+//	@Accept		json
+//	@Produce	json
+//	@Param		LeaveGroupRequest	body	domain.LeaveGroupRequest	true	"탈퇴할 모임 정보"
+//	@Success	204
+//	@Router		/groups/leave [post]
+//	@Security	BearerAuth
 func (h GroupHandler) LeaveGroup(c *fiber.Ctx) error {
 	var (
 		request domain.LeaveGroupRequest
