# internal/server/handler/user_handler.go
@@ -1,8 +1,6 @@
 package handler
 
 import (
-	"errors"
-
 	"github.com/gofiber/fiber/v2"
 	"github.com/roka-crew/samsamoohooh-backend/internal/domain"
 	"github.com/roka-crew/samsamoohooh-backend/internal/server"
@@ -10,7 +8,6 @@ import (
 	"github.com/roka-crew/samsamoohooh-backend/internal/server/middleware"
 	"github.com/roka-crew/samsamoohooh-backend/internal/server/validator"
 	"github.com/roka-crew/samsamoohooh-backend/internal/service"
-	"github.com/roka-crew/samsamoohooh-backend/pkg/apperr"
 )
 
 type UserHandler struct {
@@ -38,16 +35,13 @@ func NewUserHandler(
 
 // CreateUser godoc
 //
-//	@Tags			users
-//	@Summary		새로운 사용자 생성 ✅
-//	@Description	|message|status|description|
-//	@Description	|---|---|---|
-//	@Description	|`ERR_UESR_DUPLICATE`|409|이미 존재하는 사용자가 있는 경우|
-//	@Accept			json
-//	@Produce		json
-//	@Param			CreateUserRequest	body		domain.CreateUserRequest	true	"새로운 사용자 정보"
-//	@Success		201					{object}	domain.CreateUserResponse	"성공적으로 사용자를 생성한 경우"
-//	@Router			/users/ [post]
+//	@Tags		users
+//	@Summary	새로운 사용자 생성 ✅
+//	@Accept		json
+//	@Produce	json
+//	@Param		CreateUserRequest	body		domain.CreateUserRequest	true	"새로운 사용자 정보"
+//	@Success	201					{object}	domain.CreateUserResponse	"성공적으로 사용자를 생성한 경우"
+//	@Router		/users [post]
 func (h UserHandler) CreateUser(c *fiber.Ctx) error {
 	var (
 		request  domain.CreateUserRequest
@@ -64,15 +58,11 @@ func (h UserHandler) CreateUser(c *fiber.Ctx) error {
 	}
 
 	response, err = h.userService.CreateUser(c.Context(), request)
-
-	switch {
-	case err == nil:
-		return c.Status(fiber.StatusCreated).JSON(response)
-	case errors.Is(err, domain.ErrUserAlreadyExists):
-		return err.(*apperr.Apperr).WithStatus(fiber.StatusConflict)
-	default:
+	if err != nil {
 		return err
 	}
+
+	return c.Status(fiber.StatusCreated).JSON(response)
 }
 
 // PatchUser godoc
@@ -83,7 +73,7 @@ func (h UserHandler) CreateUser(c *fiber.Ctx) error {
 //	@Produce	json
 //	@Param		PatchUserRequest	body	domain.PatchUserRequest	true	"수정할 사용자 정보"
 //	@Success	204
-//	@Router		/users/ [patch]
+//	@Router		/users [patch]
 //	@Security	BearerAuth
 func (h UserHandler) PatchUser(c *fiber.Ctx) error {
 	var (
@@ -101,15 +91,11 @@ func (h UserHandler) PatchUser(c *fiber.Ctx) error {
 	}
 
 	err = h.userService.PatchUser(c.Context(), request)
-
-	switch {
-	case err == nil:
-		return c.SendStatus(fiber.StatusNoContent)
-	case errors.Is(err, domain.ErrUserNotFound):
-		return err.(*apperr.Apperr).WithStatus(fiber.StatusNotFound)
-	default:
+	if err != nil {
 		return err
 	}
+
+	return c.SendStatus(fiber.StatusNoContent)
 }
 
 // DeleteUser godoc
@@ -118,7 +104,8 @@ func (h UserHandler) PatchUser(c *fiber.Ctx) error {
 //	@Summary	사용자 삭제 ✅
 //	@Accept		json
 //	@Produce	json
-//	@Router		/users/ [delete]
+//	@Router		/users [delete]
+//	@Success	204
 //	@Security	BearerAuth
 func (h UserHandler) DeleteUser(c *fiber.Ctx) error {
 	var (
@@ -132,11 +119,9 @@ func (h UserHandler) DeleteUser(c *fiber.Ctx) error {
 	}
 
 	err = h.userService.DeleteUser(c.Context(), request)
-
-	switch {
-	case err == nil:
-		return c.SendStatus(fiber.StatusNoContent)
-	default:
+	if err != nil {
 		return err
 	}
+
+	return c.SendStatus(fiber.StatusNoContent)
 }
